Refactor `TaintAnalysisTransferRelation` and `TaintAnalysisState` by replacing `List` with `LinkedList`.